--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-    "name": "mirotalk",
+    "name": "hdm-meet",
     "version": "1.2.89",
-    "description": "A free WebRTC browser-based video call",
+    "description": "Conférences HDM NETWORK",
     "main": "server.js",
     "scripts": {
         "start": "node app/src/server.js",
         "start-dev": "nodemon app/src/server.js",
         "test": "echo \"Error: no test specified\" && exit 1",
         "lint": "npx prettier --write .",
-        "docker-build": "docker build --tag mirotalk/p2p:latest .",
+        "docker-build": "docker build --tag hdm-meet:latest .",
         "docker-rmi": "docker images |grep '<none>' |awk '{print $3}' |xargs docker rmi",
-        "docker-push": "docker push mirotalk/p2p:latest",
-        "docker-pull": "docker pull mirotalk/p2p:latest",
+        "docker-push": "docker push hdm-meet:latest",
+        "docker-pull": "docker pull hdm-meet:latest",
         "docker-rmc": "docker container rm mirotalk --force",
-        "docker-run": "docker run -d -p 3000:3000 --name mirotalk mirotalk/p2p:latest",
-        "docker-rune": "docker run -d -p 3000:3000 -v .env:/src/.env:ro --name mirotalk mirotalk/p2p:latest",
-        "docker-run-vm": "docker run -d -p 3000:3000 -v .env:/src/.env:ro -v ./app/:/src/app/:ro -v ./public/:/src/public/:ro --name mirotalk mirotalk/p2p:latest",
+        "docker-run": "docker run -d -p 3000:3000 --name mirotalk hdm-meet:latest",
+        "docker-rune": "docker run -d -p 3000:3000 -v .env:/src/.env:ro --name mirotalk hdm-meet:latest",
+        "docker-run-vm": "docker run -d -p 3000:3000 -v .env:/src/.env:ro -v ./app/:/src/app/:ro -v ./public/:/src/public/:ro --name mirotalk hdm-meet:latest",
         "docker-start": "docker start mirotalk",
         "docker-stop": "docker stop mirotalk"
     },
