--- a/package.json
+++ b/package.json
@@ -7,30 +7,13 @@
         "start": "node app/src/server.js",
         "start-dev": "nodemon app/src/server.js",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "lint": "npx prettier --write .",
-        "docker-build": "docker build --tag hdm-meet:latest .",
-        "docker-rmi": "docker images |grep '<none>' |awk '{print $3}' |xargs docker rmi",
-        "docker-push": "docker push hdm-meet:latest",
-        "docker-pull": "docker pull hdm-meet:latest",
-        "docker-rmc": "docker container rm mirotalk --force",
-        "docker-run": "docker run -d -p 3000:3000 --name mirotalk hdm-meet:latest",
-        "docker-rune": "docker run -d -p 3000:3000 -v .env:/src/.env:ro --name mirotalk hdm-meet:latest",
-        "docker-run-vm": "docker run -d -p 3000:3000 -v .env:/src/.env:ro -v ./app/:/src/app/:ro -v ./public/:/src/public/:ro --name mirotalk hdm-meet:latest",
-        "docker-start": "docker start mirotalk",
-        "docker-stop": "docker stop mirotalk"
+        "lint": "npx prettier --write ."
     },
     "repository": {
         "type": "git"
     },
     "keywords": [
-        "webrtc",
-        "socket.io",
-        "p2p",
-        "nodejs",
-        "video",
-        "audio",
-        "openai",
-        "chatgpt"
+        "HDM"
     ],
     "author": "Miroslav Pejic",
     "license": "AGPL-3.0",
